Add link back to repo

--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
             <br />
             <br />
             <h2 class="title">
-                Ship Creek Group own PyPi
+                Ship Creek Group's PyPi
             </h2>
         </section>
         <br />
         <p>
-            Welcome to the private Python package index of Ship Creek Group !
+            Welcome to the <a href="https://github.com/ShipCreekGroup/package-index">
+                private Python package index of Ship Creek Group!</a>
             <br />
             You can install packages with :
         <pre><code>pip install &lt;package_name&gt; --extra-index-url https://shipcreekgroup.github.io/package-index/</code></pre>
