:package: [:robot:] Register package in PyPi index

--- a/index.html
+++ b/index.html
@@ -116,6 +116,18 @@
      A public github-hosted repo.
     </span>
    </a>
+   <a class="card" href="noatak/">
+    noatak
+    <span>
+    </span>
+    <span class="version">
+     0.1.0
+    </span>
+    <br/>
+    <span class="description">
+     None
+    </span>
+   </a>
   </div>
  </body>
 </html>
