--- a/noatak/index.html
+++ b/noatak/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-   <!-- Required meta tags -->
-   <meta charset="utf-8" />
-   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-   <!-- Skeleton CSS -->
-   <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
-      rel="stylesheet" />
-   <!-- Font -->
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&amp;display=swap" rel="stylesheet"
-      type="text/css" />
-   <!-- Favicon -->
-   <link
-      href="https://gist.githubusercontent.com/astariul/c09af596e802e945d3032774e10e1047/raw/f693a2e2b65966494da082887bc4be2917f615e4/random_icon.svg"
-      rel="icon" />
-   <style>
-      body {
+ <head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+  <!-- Skeleton CSS -->
+  <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" rel="stylesheet"/>
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&amp;display=swap" rel="stylesheet" type="text/css"/>
+  <!-- Favicon -->
+  <link href="https://gist.githubusercontent.com/astariul/c09af596e802e945d3032774e10e1047/raw/f693a2e2b65966494da082887bc4be2917f615e4/random_icon.svg" rel="icon"/>
+  <style>
+   body {
          font-family: "Montserrat";
       }
 
@@ -49,49 +44,48 @@
       .elem {
          margin: 1rem 0rem;
       }
-
-   </style>
-   <title>
-      Pypi - YourCompany
-   </title>
-</head>
-
-<body>
-   <div class="container">
-      <section class="header">
-         noatak
-         <span>
-         </span>
-         <span class="version">
-            0.1.0
-         </span>
-      </section>
-      <pre><code>pip install noatak --extra-index-url https://shipcreekgroup.github.io/package-index/</code></pre>
-      <a href="git+https://github.com/ShipCreekGroup/noatak@0.1.0#egg=noatak-0.1.0">
-      </a>
-      <hr />
-      <div class="row">
-         <div class="three columns">
-            <button onclick="location.href='https://github.com/ShipCreekGroup/noatak'">
-               Homepage
-            </button>
-            <p class="elem">
-               <b>
-                  Author :
-               </b>
-               Nick Crews
-            </p>
-         </div>
-         <div class="nine columns">
-            <h6 class="text-header">
-               Description
-            </h6>
-            <p>
-               None
-            </p>
-         </div>
-      </div>
+  </style>
+  <title>
+   Pypi - YourCompany
+  </title>
+ </head>
+ <body>
+  <div class="container">
+   <section class="header">
+    noatak
+    <span>
+    </span>
+    <span class="version">
+     0.0.0
+    </span>
+   </section>
+   <pre><code>pip install noatak --extra-index-url https://shipcreekgroup.github.io/package-index/</code></pre>
+   <a href="git+https://github.com/ShipCreekGroup/noatak@0.1.0#egg=noatak-0.1.0">
+   </a>
+   <a href="git+https://github.com/ShipCreekGroup/noatak@main#egg=noatak-0.0.0">
+   </a>
+   <hr/>
+   <div class="row">
+    <div class="three columns">
+     <button onclick="location.href='https://github.com/ShipCreekGroup/noatak'">
+      Homepage
+     </button>
+     <p class="elem">
+      <b>
+       Author :
+      </b>
+      Nick Crews
+     </p>
+    </div>
+    <div class="nine columns">
+     <h6 class="text-header">
+      Description
+     </h6>
+     <p>
+      None
+     </p>
+    </div>
    </div>
-</body>
-
+  </div>
+ </body>
 </html>
